# zephyr

./: MAINTAINERS.yml  Makefile  build.sh  exti_build_test.sh
boards/common/: openocd.board.cmake
boards/st/b_g431b_esc1/: Kconfig.b_g431b_esc1  b_g431b_esc1.dts  b_g431b_esc1.yaml  b_g431b_esc1_defconfig  board.cmake  board.yml
boards/st/b_g431b_esc1/doc/: index.rst
boards/st/nucleo_h745zi_q/: nucleo_h745zi_q_stm32h745xx_m7.dts  nucleo_h745zi_q_stm32h745xx_m7.yaml
boards/st/nucleo_h745zi_q/doc/: index.rst
cmake/modules/: dts.cmake
doc/hardware/peripherals/: opamp.rst
drivers/: CMakeLists.txt  Kconfig
drivers/comparator/: CMakeLists.txt  Kconfig  Kconfig.stm32_comp  comparator_stm32_comp.c
drivers/cordic/: Kconfig.stm32  cordic_stm32.c
drivers/ethernet/: CMakeLists.txt
drivers/interrupt_controller/: intc_exti_stm32.c  intc_exti_stm32_priv.h  intc_gpio_stm32wb0.c
drivers/opamp/: CMakeLists.txt  Kconfig  Kconfig.fake_opamp  Kconfig.shell  Kconfig.stm32_opamp  opamp_fake_opamp.c  opamp_handlers.c  opamp_shell.c  opamp_stm32_opamp.c  opamp_stm32g4x_opamp.c
drivers/rtc/: Kconfig.stm32  rtc_ll_stm32.c  rtc_ll_stm32.h
dts/arm/st/c0/: stm32c0.dtsi
dts/arm/st/f3/: stm32f3.dtsi
dts/arm/st/g0/: stm32g0.dtsi
dts/arm/st/g4/: stm32g4.dtsi
dts/bindings/comparator/: st,stm32-comp.yaml
dts/bindings/cordic/: cordic-controller.yaml  st,stm32-cordic.yaml
dts/bindings/opamp/: st,stm32-opamp.yaml  st,stm32g4-opamp.yaml  zephyr,opamp-fake.yaml
include/zephyr/drivers/: cordic.h  opamp.h
include/zephyr/net/: websocket.h  websocket_common.h  websocket_server.h
samples/drivers/comparator/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/net/sockets/websocket_server/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/net/sockets/websocket_server/src/: certificate.h  main.c
submanifests/: cannectivity.yaml
subsys/net/lib/: CMakeLists.txt  Kconfig
tests/net/lib/websocket_server/: CMakeLists.txt  prj.conf  testcase.yaml
tests/net/lib/websocket_server/src/: main.c  test_websocket_frame.c  test_ws_http_parser.c
(+66 files in other folders)
